--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vimfiles/bundle/bufferlist"]
 	path = vimfiles/bundle/bufferlist
 	url = https://github.com/roblillack/vim-bufferlist
+[submodule "vimfiles/bundle/ctrlp"]
+	path = vimfiles/bundle/ctrlp
+	url = https://github.com/kien/ctrlp.vim
