--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vimfiles/bundle/solarized"]
 	path = vimfiles/bundle/solarized
 	url = https://github.com/BlackIkeEagle/vim-colors-solarized
+[submodule "vimfiles/bundle/javascript"]
+	path = vimfiles/bundle/javascript
+	url = https://github.com/pangloss/vim-javascript
