--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "vimfiles/bundle/nerdtree-ack"]
 	path = vimfiles/bundle/nerdtree-ack
 	url = https://github.com/tyok/nerdtree-ack
+[submodule "vimfiles/bundle/undotree"]
+	path = vimfiles/bundle/undotree
+	url = https://github.com/mbbill/undotree.git
