--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "vimfiles/bundle/DrawIt"]
 	path = vimfiles/bundle/DrawIt
 	url = https://github.com/vim-scripts/DrawIt.git
+[submodule "vimfiles/bundle/vinegar"]
+	path = vimfiles/bundle/vinegar
+	url = https://github.com/tpope/vim-vinegar.git
