--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "vimfiles/bundle/vim-signify"]
 	path = vimfiles/bundle/vim-signify
 	url = https://github.com/mhinz/vim-signify.git
+[submodule "vimfiles/bundle/base16-vim"]
+	path = vimfiles/bundle/base16-vim
+	url = https://github.com/chriskempson/base16-vim.git
