--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "vimfiles/bundle/base16-vim"]
 	path = vimfiles/bundle/base16-vim
 	url = https://github.com/chriskempson/base16-vim.git
+[submodule "vimfiles/bundle/papercolor-theme"]
+	path = vimfiles/bundle/papercolor-theme
+	url = https://github.com/NLKNguyen/papercolor-theme.git
