--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "vimfiles/bundle/QFGrep"]
 	path = vimfiles/bundle/QFGrep
 	url = https://github.com/sk1418/QFGrep.git
+[submodule "vimfiles/bundle/vim-markdown"]
+	path = vimfiles/bundle/vim-markdown
+	url = https://github.com/gabrielelana/vim-markdown.git
